--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<img class="img-fluid twelve"src="img/twelve.jpeg">
+				<h1>Volleyball</h1>
+				<img class="img-fluid volley"src="img/volley.avif">
 			</div>
 		</div>
 	
-		<div class="row">
+		<div class="row row1">
 			<div class="col-md-4">
-				<img class="img-fluid three"src="img/three.png">
+				<img class="img-thumbnail rounded-circle"src="img/convert.webp">
 			</div>
 			<div class="col-md-4">
-				<h1>This is Ivi!A mini maltese dog who is 1 years old.she loves eating food and running around in the garden.Ivi is a tiny, one-year-old Mini Maltese with a gentle, sweet presence. She has soft, cloud-like white fur that makes her look delicate and elegant, yet she’s full of playful puppy energy. Her dark, round eyes are bright and expressive, always watching you closely as if she understands everything you say.</h1>
+				<h2>Volleyball is a fast-paced team sport that combines skill, strategy, and communication. Played by two teams separated by a net,each team has six players who work together using passing, setting, spiking, blocking, and serving.</h2>
 			</div>
 			<div class="col-md-4">
-				<img class="img-fluid six"src="img/six.png">
+				<img class="img-thumbnail rounded-circle"src="img/720p.webp">
 			</div>
 		</div>
-		<div class="row">
+		<div class="row row2">
 			<div class="col-md-6">
-				<img class="img-fluid one"src="img/one.jpeg">
+				<img class="img-fluid crop"src="img/crop.webp">
 			</div>
 			<div class="col-md-6">
-				<h2>Having a dog is speacial because Having a female dog as a teen girl can be really meaningful for several reasons. First, it can foster a sense of responsibility. Taking care of a dog, whether it’s feeding, walking, or grooming, helps develop maturity and time management skills. Plus, a dog offers emotional support—dogs are incredibly intuitive and can sense when you're feeling down. They can be comforting companions, especially during the ups and downs of adolescence.</h2>
+				<h3>What makes volleyball special is the teamwork it requires—no single player can succeed alone. Quick thinking, trust, and coordination are essential in every rally. Beyond competition, volleyball promotes fitness, discipline, and sportsmanship.Wether played indoors or outdoors it always has its way to bring people together.</h3>
 			</div>
 		</div>
 	</div>			
